<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bluetoothBtn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/connect_to_hc_05"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scanBtn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bg"
        android:contentDescription="@string/app_name"
        android:text="@string/scan_for_devices"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@id/bluetoothBtn"/>


    <ListView
        android:id="@+id/deviceListView"
        android:layout_below="@id/scanBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deviceListView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/leftButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            android:layout_marginStart="80dp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="40dp"
            android:scaleType="fitCenter"
            android:background="@drawable/keys_bg"
            android:src="@drawable/left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upButton" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/rightButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:scaleType="fitCenter"
            android:padding="4dp"
            android:background="@drawable/keys_bg"
            android:src="@drawable/right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upButton" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/upButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="80dp"
            android:background="@drawable/keys_bg"
            android:scaleType="fitCenter"
            android:src="@drawable/up_button"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/downButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/keys_bg"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/down_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/stopButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/keys_bg"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/downButton"
            app:layout_constraintEnd_toStartOf="@+id/rightButton"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toEndOf="@+id/leftButton"
            app:layout_constraintTop_toBottomOf="@+id/upButton"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/stop" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/moistureLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/controller"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:text="@string/moisture"/>


        <Switch
            android:id="@+id/moistureSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>




    <TextView
        android:id="@+id/moisture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/moistureLayout"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="24.26589" />

    <LinearLayout
        android:id="@+id/seeder"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/moisture"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seederLow"
            android:text="@string/seeder_l"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seederMedium"
            android:text="@string/seeder_m"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seederHigh"
            android:text="@string/seeder_h"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/waterpumpLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/seeder"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:text="@string/water_pump"/>


        <Switch
            android:id="@+id/waterPump"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>



</RelativeLayout>